@@ -11,6 +11,14 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-12-00
+2013-11-02 Andy Salnikov
+- preparation for new DDL parser: few tags renamed:
+  - no-proxy to embedded (in h5 schema)
+  - c++-definition to force_definiton (in constructor)
+  - no-c++-definition to external (in constructor)
+- last two tags are not used anywhere
+
 Tag: V00-11-00
 2013-11-02 Andy Salnikov
 - small scale refactoring of backends:
